<resources>
    <string name="app_name">Tarefas</string>
    <string name="minhas">Minhas</string>
    <string name="tarefas">Tarefas</string>
    <string name="text_label_1">A fazer</string>
    <string name="text_label_2">Em progresso</string>
    <string name="text_label_3">Feitas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_lista_vazia">Opa... Não há nada aqui!</string>
    <string name="texto_lista_vazia_fazer">Mas aposto que você possui muita coisa para fazer.</string>
    <string name="texto_comece">Comece sua lista!</string>
    <string name="texto_lista_vazia_progresso">Que tal iniciar alguma tarefa da sua lista?</string>
    <string name="texto_lista_vazia_feitas">Acredito no seu potencial de terminar uma tarefa hoje. ;)</string>
    <string name="nova_tarefa">Nova tarefa</string>
    <string name="texto_tarefa">Adicione uma tarefa que ainda será feita</string>
    <string name="feita">Feita</string>
    <string name="titulo_da_tarefa">Título da tarefa</string>
    <string name="descricao">Descrição da tarefa</string>
    <string name="opcional">Opcional</string>
    <string name="criar_tarefa">Criar tarefa</string>
    <string name="adicionar">Adicionar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="a_fazer">A fazer</string>
    <string name="hint1">As you can clearly see, we do not define the orientation of the line. Here comes the strange part when drawing vertical lines, we need to rotate the whole drawable with 90 degrees in order to obtain the desired outcome. Doesn’t sound very hard, does it? Below you can see the code, the referenced drawable was defined above.</string>
    <string name="iniciar_tarefa">Iniciar tarefa</string>
    <string name="excluir_tarefa">Excluir tarefa</string>
    <string name="fazer_compras">Fazer compras</string>
</resources>