<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="52dp"
        android:layout_marginHorizontal="22dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pretinho"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="@string/nova_tarefa"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/texto_tarefa"
            android:textColor="@color/pretinho"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="28dp"
            android:padding="16dp"
            android:textSize="16sp"
            android:hint="@string/titulo_da_tarefa"
            android:textColorHint="@color/cinza_texto"
            android:background="@color/cinza_fundo"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginTop="38dp"
            android:textSize="16sp"
            android:padding="16dp"
            android:hint="@string/descricao"
            android:textColorHint="@color/cinza_texto"
            android:background="@color/cinza_fundo"
            android:gravity="top"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/opcional"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:backgroundTint="@color/botao"
            android:text="@string/criar_tarefa"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>